Create Order done

--- a/client/src/pages/Orders/Orders.css
+++ b/client/src/pages/Orders/Orders.css
@@ -15,7 +15,8 @@
   /* justify-content: center; */
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
+  padding-bottom: 15px;
 }
 
 .noOrdersText {
